--- a/assets/style.css
+++ b/assets/style.css
@@ -1,39 +1,37 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 16px;
   line-height: 1;
+  background: #ff7565;
+  margin-bottom: 200px;
 }
 
 textarea {
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
-  border-left: 1px solid black;
+  color: #333;
+  border-left: 1px solid #333;
   padding: 10px;
+  text-align: left;
 }
 
 .jumbotron {
+  font-family: 'Lora', serif;
   text-align: center;
-  background-image: radial-gradient(circle, rgba(255, 255, 229, 0.9), rgb(255, 168, 216, .5), rgb(255, 164, 103, .4)),
-    url(/imgs/pipes.png);
-  color: black;
+  color: #333;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  background: #ff8335;
+  border-bottom: 10px solid #333;
 }
 
 #currentDay {
   font-size: 24px;
-  color: black;
-  background: rgba(255, 255, 229, 0.5);
+  color: #333;
   display: table;
   margin: 0px auto 0px auto;
   padding: 20px;
-  border: 1px black dashed;
-}
-
-.description {
-  white-space: pre-wrap;
+  border-radius: 20px;
 }
 
 .time-block {
@@ -42,45 +40,58 @@ textarea {
 }
 
 .row {
-  white-space: pre-wrap;
+  #333-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;
+  border: none;
 }
 
 .hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+  background-color: transparent;
+  color: #333;
+  font-size: 20px;
+  text-align: center;
+  padding-top: 20px;
+  text-decoration: underline;
+  text-decoration-color: #ffb73b;
+  text-decoration-thickness: 10px;
+  text-decoration-style: solid;
+  border: none;
 }
 
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: #f4a3a3;
+  color: #333;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #ff3e34;
+  color: #333;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #ffecae;
+  color: #333;
 }
 
 .saveBtn {
-  border-left: 1px solid black;
+  border-left: 1px solid rgb(142, 142, 142);
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
-  color: white;
+  background-color: #ffae70;
+  color: #333;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
+  font-size: 48px;
   transition: all 0.3s ease-in-out;
 }
 
 .smiley {
   font-size: 40px;
+}
+
+.form-control {
+  text-align: left;
+  padding-top: 10px;
+  border: none;
 }
